# hickoxyz

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.fargate  Gruntfile.js  LICENSE.txt  Pipfile  README.md  app_tests.py  buildspec.yml  deploy.txt  docker-compose.yml  fly.toml  gunicorn_config.py  imagedefinitions.json  manifest.json  pyproject.toml  requirements.txt  server.py  start.sh
.github/workflows/: deploy.yml  test.yml
app/: __init__.py  controller.py  historic_commits.json  models.py  views.py
app/static/css/: bootflat.css  bootstrap.css  main.css  main_v2.css
app/static/js/: app.js  navbar.js  slideshow.js  timeline.js
app/templates/: about.html  base.html  docs_api.html  index.html  projects.html  stats.html  works.html
app/templates/v2/: about.html  base.html  index.html  projects.html
app/tests/: fixtures.py  test_app.py
