[project]
name = "hickoxyz"
version = "0.1.0"
description = "Flask app for elihickox.com"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask~=2.3.2",
  "gunicorn>=19.10.0",
  "gevent~=23.9.1",
  "python-dateutil~=2.8",
  "requests>=2.21.0",
  "six~=1.12.0",
  "urllib3>=1.25.9",
]

[tool.uv]
# uv uses this table for dev dependencies
dev-dependencies = [
  "pytest>=7.0",
  "black",
]
