[project]
name = "hickoxyz"
version = "0.1.0"
description = "Flask app for elihickox.com"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "Flask>=3.0.0",
  "gunicorn>=23.0.0",
  "gevent>=24.10.1",
  "python-dateutil>=2.9.0",
  "requests>=2.32.0",
  "six>=1.16.0",
  "urllib3>=2.2.0",
]

[tool.uv]
# uv uses this table for dev dependencies
dev-dependencies = [
  "pytest>=7.0",
  "black",
]
